cart and order work properly

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     
 
     <div id="root"></div>
+    <div id="cart-root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
